--- a/DW/2-intermedio/014.api-rest-js/3.api-rest-js-performance/3.api-rest-js-performance.md
+++ b/DW/2-intermedio/014.api-rest-js/3.api-rest-js-performance/3.api-rest-js-performance.md
@@ -857,6 +857,208 @@ info
 ```
 
 ## 17. Lista de películas favoritas
+
+## Quiz: Performance y Usabilidad
+
+1. What does the author recommend for storing temporary data?
+Elige la respuesta correcta
+
+	- Session storage
+
+2. What are the advantages of using an API for storing private data?
+Elige la respuesta correcta
+
+	- It provides more control and security
+
+3. What is the purpose of using console.log in this code snippet?
+Elige la respuesta correcta
+
+	- To log the result of retrieving the likedMovies item from localStorage
+
+4. Which method is used to retrieve the likedMovies item from localStorage?
+Elige la respuesta correcta
+
+	- getItem
+
+5. After converting the 'liked movies' into an array, what is the next step in the process?
+Elige la respuesta correcta
+
+	- Calling the 'createMovies' function
+
+## 18. Reto: selección de idioma
+
+Revisar la API the movies db [languages](https://developer.themoviedb.org/docs/languages):
+
+![](https://i.postimg.cc/vBydmNzQ/18-language.png)
+
+![](https://i.postimg.cc/0yJg0sXk/18-language-2.png)
+
+### `Navigator.language` 👈👀
+
+`Navigator.language` es una propiedad en JavaScript que devuelve el código de idioma del navegador. Este código de idioma sigue generalmente el estándar de IETF BCP 47, como "en-US" para inglés (Estados Unidos) o "es-ES" para español (España).
+
+Aquí te explico cómo usar `Navigator.language`:
+
+### 1. Obtener el idioma del navegador
+Puedes obtener el idioma predeterminado del navegador simplemente accediendo a la propiedad `navigator.language`:
+
+```javascript
+const userLanguage = navigator.language || navigator.userLanguage;
+console.log(userLanguage); // Ejemplo: "en-US"
+```
+
+### 2. Uso práctico
+Usar el idioma del navegador puede ser útil para personalizar la experiencia del usuario, como mostrar contenido en el idioma preferido del usuario.
+
+#### Ejemplo: Mostrar un mensaje de bienvenida en el idioma del usuario
+
+```javascript
+const userLanguage = navigator.language || navigator.userLanguage;
+
+const messages = {
+  "en-US": "Welcome!",
+  "es-ES": "¡Bienvenido!",
+  "fr-FR": "Bienvenue!"
+};
+
+const defaultMessage = "Welcome!";
+const message = messages[userLanguage] || defaultMessage;
+
+console.log(message); // Muestra el mensaje en el idioma del usuario, si está definido, o el mensaje por defecto.
+```
+
+### 3. Consideraciones
+- `navigator.language` solo devuelve el idioma preferido del navegador, no la configuración regional completa del usuario.
+- Algunos navegadores pueden devolver solo el código de idioma sin la configuración regional (por ejemplo, "en" en lugar de "en-US").
+- Si necesitas más detalles sobre los idiomas aceptados por el navegador, puedes usar `navigator.languages`, que devuelve una lista ordenada de los idiomas preferidos del usuario.
+
+#### Ejemplo: Usar `navigator.languages`
+
+```javascript
+const userLanguages = navigator.languages;
+console.log(userLanguages); // Ejemplo: ["en-US", "fr-FR", "es-ES"]
+
+const primaryLanguage = userLanguages[0];
+console.log(primaryLanguage); // Ejemplo: "en-US"
+```
+
+### Resumen
+
+`Navigator.language` es una forma sencilla y útil de acceder al idioma preferido del usuario en su navegador. Puedes usar esta información para personalizar la experiencia del usuario en tu aplicación web, como mostrar contenido en el idioma correcto o ajustar otros aspectos basados en la preferencia de idioma del usuario.
+
+## 19. Deploy
+
+- Ver notas en Obsidian [[gh-pages]]
+- Ver notas en GitHub [gh-pages](https://github.com/aleroses/Platzi/blob/master/DW/1-basico/005-git-github/gh-pages.md)
+
+https://developer.themoviedb.org/reference/configuration-details
+
+https://lauramunozcaiced.github.io/lmovies/
+
+```bash
+git push origin development
+```
+
+## 20. Más proyectos para tu portafolio
+
+## Examen 📌
+<details>
+	<summary>Haz clic para ver los resultados 👀</summary>
+	<br/>
+
+1. ¿Qué es caché?
+
+
+a ✅  mal📌
+Guardar los cálculos de la aplicación (en memoria, durante la ejecución de nuestro código) para no tener que repetirlos.
+
+b
+Cuando el navegador guarda la respuesta de una consulta HTTP para no hacer esa misma consulta de nuevo durante un rango de tiempo seguro.
+
+2. ¿Qué problemas podemos tener si implementamos técnicas como caché o memoization?
+
+	- ✅ No sabremos si la información cambió en el backend hasta que volvamos a hacer la consulta HTTP.
+
+3. Agregar nuestra API KEY a un archivo ignorado por el .gitignore nos asegura protección completa y es una muy buena práctica.
+
+	- ✅ Sí, pero no. Nadie podrá ver nuestra API KEY desde el repositorio. Pero al hacer deploy nuestra API KEY debe ser visible de alguna forma desde el navegador para el correcto funcionamiento de la aplicación.
+
+4. Trabajas como frontend developer en Facebook. La empresa ya no quiere enfocarse en buscar público más joven, sino en atender mejor al público mayor que sigue usando la red social. Tu equipo propone cambiar el scroll infinito por paginación porque "la gente mayor ya no está para esos trotes". ¿Qué opinas?
+
+	- ✅ No vale la pena. Cambiar el infinite scroll por paginación bajaría la adictividad del sitio, incluso con personas mayores.
+
+5. Es muy buena práctica que la pantalla de error y la pantalla de carga sean exactamente iguales para evitar que los usuarios se lleven una mala impresión de nuestra aplicación.
+
+	- ✅ Falso
+
+6. Trabajas como frontend developer en un periódico digital con aproximadamente 5 noticias a la semana. Los clientes piden mejorar la velocidad para ver sus noticias. Tu equipo propone solucionarlo implementando caché en la plataforma web. ¿Qué opinas?
+
+	- ✅ Absolutamente sí: aunque el caché no mejoraría la velocidad en la primera consulta de cada lector, sí la mejoraría en las siguientes veces que entre o navegue por el portal.
+
+7. Trabajas como frontend developer en una tienda online de celulares. La empresa necesita mejorar las ventas. Tu equipo propone cambiar la paginación por infinite scrolling para que la tienda sea mucho más adictiva. ¿Qué opinas?
+Elige la respuesta correcta
+
+
+a
+Sí vale la pena. En realidad, el infinite scroll NO ayudaría a aumentar la adicción de los usuarios, pero SÍ ayudaría a subir las ventas porque ayudaría a encontrar más resultados más rápido (y entre más resultados, más compras).
+
+b
+No vale la pena. Cambiar la paginación por infinite scroll no aumentaría la adictividad de nuestra tienda.
+
+c ✅ mal📌 
+Sí vale la pena. Implementar infinite scroll ayudaría a aumentar la adicción de los usuarios en la tienda (y entre más adicción, más ventas).
+
+d
+No vale la pena. Aunque implementar infinite scroll ayudaría a aumentar la adicción de los usuarios, bajaría las ventas porque generaría frustración al dificultar encontrar contenido específico.
+
+8. La cantidad de usuarios que abandona nuestro sitio web incrementa dramáticamente por cada segundo que tarda nuestro contenido en cargar.
+	
+	- ✅ Verdadero
+
+9. Tu aplicación demora algunos segundos en cargar completamente mientras hace consultas a la API REST. ¿Qué harías?
+	
+	- ✅ Agregar loading skeletons para que los usuarios sepan que estamos cargando la información (y sepan qué tipo de contenido se está cargando).
+
+10. ¿Qué es memoization?
+
+	- ✅ Guardar los cálculos de la aplicación (en memoria, durante la ejecución de nuestro código) para no tener que repetirlos.
+
+11. Al aprender Axios evitamos la necesidad de aprender Fetch. Esta afirmación es:
+
+	- ✅ Falsa
+
+12. ¿Cuál pestaña de las DevTools de tu navegador nos permite examinar las consultas HTTP (y el tiempo que tarda cada una)?
+
+	- ✅ Networking
+
+13. ¿Qué podemos hacer desde el frontend para mejorar la velocidad de nuestras aplicaciones web?
+
+	- ✅ Utilizar técnicas de caché o memoization para no cargar más una vez los recursos que necesitamos.
+
+14. Combinar datos de Local Storage con datos de una API REST es una MALA PRÁCTICA.
+
+	- ✅ Falso.
+
+15. ¿Cuál de los siguientes datos son seguros para guardar en Local Storage?
+Elige la respuesta correcta
+
+
+a
+Números de tarjeta de crédito o débito.
+
+b
+Ninguna de las respuestas es correcta.
+
+c ✅ mal XD
+Tokens de autenticación.
+
+d
+Correo y contraseña.
+
+</details>
+
+
+✅ 
 🔥
 📌
 👈👀
