--- a/DW/2-intermedio/014.api-rest-js/3.api-rest-js-performance/3.api-rest-js-performance.md
+++ b/DW/2-intermedio/014.api-rest-js/3.api-rest-js-performance/3.api-rest-js-performance.md
@@ -968,12 +968,7 @@ git push origin development
 
 1. ¿Qué es caché?
 
-
-a ✅  mal📌
-Guardar los cálculos de la aplicación (en memoria, durante la ejecución de nuestro código) para no tener que repetirlos.
-
-b
-Cuando el navegador guarda la respuesta de una consulta HTTP para no hacer esa misma consulta de nuevo durante un rango de tiempo seguro.
+	- ✅ Cuando el navegador guarda la respuesta de una consulta HTTP para no hacer esa misma consulta de nuevo durante un rango de tiempo seguro.
 
 2. ¿Qué problemas podemos tener si implementamos técnicas como caché o memoization?
 
@@ -996,10 +991,8 @@ Cuando el navegador guarda la respuesta de una consulta HTTP para no hacer esa m
 	- ✅ Absolutamente sí: aunque el caché no mejoraría la velocidad en la primera consulta de cada lector, sí la mejoraría en las siguientes veces que entre o navegue por el portal.
 
 7. Trabajas como frontend developer en una tienda online de celulares. La empresa necesita mejorar las ventas. Tu equipo propone cambiar la paginación por infinite scrolling para que la tienda sea mucho más adictiva. ¿Qué opinas?
-Elige la respuesta correcta
 
-
-a
+a ✅ este mal
 Sí vale la pena. En realidad, el infinite scroll NO ayudaría a aumentar la adicción de los usuarios, pero SÍ ayudaría a subir las ventas porque ayudaría a encontrar más resultados más rápido (y entre más resultados, más compras).
 
 b
@@ -1008,7 +1001,7 @@ No vale la pena. Cambiar la paginación por infinite scroll no aumentaría la ad
 c ✅ mal📌 
 Sí vale la pena. Implementar infinite scroll ayudaría a aumentar la adicción de los usuarios en la tienda (y entre más adicción, más ventas).
 
-d
+	- d probar este 
 No vale la pena. Aunque implementar infinite scroll ayudaría a aumentar la adicción de los usuarios, bajaría las ventas porque generaría frustración al dificultar encontrar contenido específico.
 
 8. La cantidad de usuarios que abandona nuestro sitio web incrementa dramáticamente por cada segundo que tarda nuestro contenido en cargar.
@@ -1040,20 +1033,30 @@ No vale la pena. Aunque implementar infinite scroll ayudaría a aumentar la adic
 	- ✅ Falso.
 
 15. ¿Cuál de los siguientes datos son seguros para guardar en Local Storage?
+
+	- Números de tarjeta de crédito o débito.
+	- ✅ Ninguna de las respuestas es correcta.
+	- Tokens de autenticación.
+	- Correo y contraseña.
+
+16. Es muy buena práctica que nuestra pantalla de carga sea divertida.
 Elige la respuesta correcta
 
+	- ✅ Verdadero. Las pantallas de carga pueden ser divertidas DEPENDIENDO del tono de nuestra aplicación. SIEMPRE deben ser al menos tolerables y fáciles de reconocer.
 
-a
-Números de tarjeta de crédito o débito.
+17. Trabajas como frontend developer en un banco con aproximadamente 5 millones de transacciones al día. Los clientes piden mejorar la velocidad para ver su dinero y transacciones. Tu equipo propone solucionarlo implementando caché en la plataforma web. ¿Qué opinas?
+
+a ✅ mal
+Absolutamente sí: aunque el caché no mejoraría la velocidad en la primera transacción de cada cliente, sí la mejoraría en sus siguientes consultas a la plataforma web.
 
 b
-Ninguna de las respuestas es correcta.
+Absolutamente no: el caché NO mejoraría la velocidad, solo sería un paso extra en el flujo de transacciones de los usuarios.
 
-c ✅ mal XD
-Tokens de autenticación.
+c
+Absolutamente sí: el caché mejoraría la velocidad automáticamente para cada visita.
 
-d
-Correo y contraseña.
+d quizá este
+Absolutamente no: el caché mejoraría la velocidad, pero podría mostrar información desactualizada bastante seguido.
 
 </details>
 
