--- a/DW/2-intermedio/014.api-rest-js/3.api-rest-js-performance/3.api-rest-js-performance.md
+++ b/DW/2-intermedio/014.api-rest-js/3.api-rest-js-performance/3.api-rest-js-performance.md
@@ -992,17 +992,7 @@ git push origin development
 
 7. Trabajas como frontend developer en una tienda online de celulares. La empresa necesita mejorar las ventas. Tu equipo propone cambiar la paginación por infinite scrolling para que la tienda sea mucho más adictiva. ¿Qué opinas?
 
-a ✅ este mal
-Sí vale la pena. En realidad, el infinite scroll NO ayudaría a aumentar la adicción de los usuarios, pero SÍ ayudaría a subir las ventas porque ayudaría a encontrar más resultados más rápido (y entre más resultados, más compras).
-
-b
-No vale la pena. Cambiar la paginación por infinite scroll no aumentaría la adictividad de nuestra tienda.
-
-c ✅ mal📌 
-Sí vale la pena. Implementar infinite scroll ayudaría a aumentar la adicción de los usuarios en la tienda (y entre más adicción, más ventas).
-
-	- d probar este 
-No vale la pena. Aunque implementar infinite scroll ayudaría a aumentar la adicción de los usuarios, bajaría las ventas porque generaría frustración al dificultar encontrar contenido específico.
+	- ✅ No vale la pena. Aunque implementar infinite scroll ayudaría a aumentar la adicción de los usuarios, bajaría las ventas porque generaría frustración al dificultar encontrar contenido específico.
 
 8. La cantidad de usuarios que abandona nuestro sitio web incrementa dramáticamente por cada segundo que tarda nuestro contenido en cargar.
 	
@@ -1046,17 +1036,7 @@ Elige la respuesta correcta
 
 17. Trabajas como frontend developer en un banco con aproximadamente 5 millones de transacciones al día. Los clientes piden mejorar la velocidad para ver su dinero y transacciones. Tu equipo propone solucionarlo implementando caché en la plataforma web. ¿Qué opinas?
 
-a ✅ mal
-Absolutamente sí: aunque el caché no mejoraría la velocidad en la primera transacción de cada cliente, sí la mejoraría en sus siguientes consultas a la plataforma web.
-
-b
-Absolutamente no: el caché NO mejoraría la velocidad, solo sería un paso extra en el flujo de transacciones de los usuarios.
-
-c
-Absolutamente sí: el caché mejoraría la velocidad automáticamente para cada visita.
-
-d quizá este
-Absolutamente no: el caché mejoraría la velocidad, pero podría mostrar información desactualizada bastante seguido.
+	- ✅ Absolutamente no: el caché mejoraría la velocidad, pero podría mostrar información desactualizada bastante seguido.
 
 </details>
 
@@ -1065,4 +1045,3 @@ Absolutamente no: el caché mejoraría la velocidad, pero podría mostrar inform
 🔥
 📌
 👈👀
-ver curso de autenticación
