--- a/DW/2-intermedio/014.api-rest-js/3.api-rest-js-performance/3.api-rest-js-performance.md
+++ b/DW/2-intermedio/014.api-rest-js/3.api-rest-js-performance/3.api-rest-js-performance.md
@@ -1,6 +1,6 @@
 # Curso de API REST con Javascript: Performance y Usabilidad
 
-> 09/06/2024
+> Del 09/06/2024 hasta 02/07/2024
 
 
 ## 1. Tu responsabilidad como frontend developer
