--- a/DW/2-intermedio/019.empaquetadores/2.vite.md
+++ b/DW/2-intermedio/019.empaquetadores/2.vite.md
@@ -659,6 +659,9 @@ export default App;
 
 En este ejemplo, la clase `button` siempre se aplica, mientras que las clases `primary`, `secondary`, `large` y `small` se aplican condicionalmente según las props que se pasen al componente `Button`.
 
+- [Vite CSS Modules](https://vitejs.dev/guide/features#css-modules)
+- [React + CSS Modules](https://www.youtube.com/watch?v=3QTL4lTpPEY)
+
 ## 9. Importar imágenes
 
 Para añadir imágenes a un proyecto usando Vite, puedes seguir estos pasos. Vite facilita el manejo de activos estáticos como imágenes, por lo que puedes importarlas y usarlas fácilmente en tus componentes de React. A continuación, te muestro cómo hacerlo con un ejemplo paso a paso.
@@ -974,6 +977,36 @@ Utilizando `import.meta.glob`, puedes importar de manera masiva todos los archiv
 
 ### Con JavaScript Vainilla
 
+`modules/moduleOne.js`
+
+```js
+const module = {
+  name: "module one"
+};
+
+export const load = () => {
+  console.log(`${module.name} load!`)
+}
+
+export default module;
+```
+
+`modules/moduleTwo.js`
+
+```js
+const module = {
+  name: "module two"
+};
+
+export const load = () => {
+  console.log(`${module.name} load!`)
+}
+
+export default module;
+```
+
+`main.js`
+
 ```js
 const modules = import.meta.glob("./modules/*.js");
 
@@ -994,7 +1027,7 @@ console.info(modules);
 
 ## 12. Uso con TypeScript
 
-Para usar TypeScript en un proyecto Vite, puedes crear un proyecto nuevo con soporte para TypeScript o agregar TypeScript a un proyecto existente.
+Por defecto no se necesita ninguna configuración, solo crea los archivos `.ts` con el código necesario y listo.
 
 ### Crear un Proyecto Nuevo con TypeScript
 
@@ -1704,7 +1737,15 @@ Estructura:
 
 Los pasos para crear un proyecto con Vue es igual a los pasos anteriores, solo debes seleccionar vue en las opciones que van apareciendo en consola.
 
-## 19. 
+## 19. Despedida
+
+## 🔥 Examen
+
+<details>
+  <summary>Haz clic para ver los resultados 👀👇</summary>
+  <br/>
+
+</details>
 
 👀
 👀👇
