--- a/DW/2-intermedio/019.empaquetadores/2.vite.md
+++ b/DW/2-intermedio/019.empaquetadores/2.vite.md
@@ -1583,6 +1583,129 @@ spa test
 
 ## 15. Sitios multi-página
 
+### ¿Qué son los Sitios Multi-página?
+
+Un sitio multi-página (MPA, por sus siglas en inglés) es un tipo de sitio web que consta de múltiples páginas HTML distintas, cada una con su propio contenido y URL. A diferencia de las aplicaciones de una sola página (SPA), donde el contenido se carga dinámicamente sin recargar la página, los MPAs recargan la página completa al navegar entre diferentes secciones.
+
+### ¿Cómo se usan y funcionan los Sitios Multi-página?
+
+1. **Estructura:** Los MPAs suelen tener una estructura jerárquica donde hay una página principal y varias subpáginas. Por ejemplo, un sitio web corporativo puede tener una página de inicio, una página de servicios, una página de contacto, etc.
+  
+2. **Navegación:** Cada página se carga de manera independiente y la navegación entre páginas implica una solicitud al servidor para cargar una nueva página HTML completa.
+
+3. **SEO:** Son más favorables para el SEO (optimización de motores de búsqueda) ya que cada página tiene su propia URL y puede ser indexada individualmente por los motores de búsqueda.
+
+### Crear un Sitio Multi-página con Vite
+
+Vite es una herramienta de construcción rápida para proyectos web modernos, que soporta tanto SPAs como MPAs. Aquí hay una guía paso a paso para crear un MPA con Vite:
+
+1. **Instalar Vite:**
+
+   Primero, asegúrate de tener Node.js instalado. Luego, crea un nuevo proyecto con Vite:
+
+   ```bash
+   npm create vite@latest my-mpa-project
+   cd my-mpa-project
+   npm install
+   ```
+
+2. **Estructura del Proyecto:**
+
+   Organiza tu proyecto de manera que cada página tenga su propio archivo HTML. Por ejemplo:
+
+   ```bash
+   /public
+     /about.html
+     /contact.html
+   /src
+     /main.js
+     /about.js
+     /contact.js
+   /index.html
+   ```
+
+3. **Configurar Vite para MPA:**
+
+   Modifica el archivo `vite.config.js` para definir múltiples entradas para las diferentes páginas:
+
+   ```js
+   import { defineConfig } from 'vite';
+   import { resolve } from 'path';
+
+   export default defineConfig({
+     build: {
+       rollupOptions: {
+         input: {
+           main: resolve(__dirname, 'index.html'),
+           about: resolve(__dirname, 'public/about.html'),
+           contact: resolve(__dirname, 'public/contact.html'),
+         }
+       }
+     }
+   });
+   ```
+
+4. **Añadir Scripts a Cada Página:**
+
+   En cada archivo HTML, incluye el script correspondiente:
+
+   ```html
+   <!-- index.html -->
+   <!DOCTYPE html>
+   <html lang="en">
+   <head>
+     <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <title>Home</title>
+   </head>
+   <body>
+     <h1>Home Page</h1>
+     <script type="module" src="/src/main.js"></script>
+   </body>
+   </html>
+   
+   <!-- about.html -->
+   <!DOCTYPE html>
+   <html lang="en">
+   <head>
+     <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <title>About</title>
+   </head>
+   <body>
+     <h1>About Page</h1>
+     <script type="module" src="/src/about.js"></script>
+   </body>
+   </html>
+   
+   <!-- contact.html -->
+   <!DOCTYPE html>
+   <html lang="en">
+   <head>
+     <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <title>Contact</title>
+   </head>
+   <body>
+     <h1>Contact Page</h1>
+     <script type="module" src="/src/contact.js"></script>
+   </body>
+   </html>
+   ```
+
+5. **Desarrollar y Construir:**
+
+   Utiliza los comandos de Vite para desarrollar y construir tu proyecto:
+
+   ```bash
+   npm run dev   # para el desarrollo
+   npm run build # para la producción
+   ```
+
+Este enfoque te permite mantener un sitio web estructurado y fácil de mantener, mientras aprovechas la velocidad y simplicidad de Vite.
+
+### Código de la clase
+
 `vite.config.js`
 
 ```js
@@ -1652,6 +1775,173 @@ npm run build
 ```
 
 ## 16. Construir librerías
+
+Vite es una herramienta excelente no solo para crear aplicaciones web, sino también para construir librerías JavaScript. Crear una librería implica empaquetar código que puede ser reutilizado en múltiples proyectos. Las librerías pueden contener funciones, componentes, hooks, o cualquier otra pieza de código que desees compartir.
+
+### ¿Para qué sirven las Librerías?
+
+1. **Reutilización de Código:** Permiten usar el mismo código en diferentes proyectos sin duplicación.
+2. **Mantenimiento:** Facilitan la actualización y el mantenimiento del código compartido.
+3. **Modularidad:** Fomentan una arquitectura de software modular, donde los componentes se pueden desarrollar y actualizar de manera independiente.
+4. **Compartir con la Comunidad:** Puedes publicar librerías en repositorios como npm para que otros desarrolladores también las utilicen.
+
+### Pasos para Crear una Librería con Vite
+
+1. **Inicializar un Nuevo Proyecto con Vite:**
+
+   Crea un nuevo proyecto con Vite:
+
+   ```bash
+   npm create vite@latest my-library --template lib
+   cd my-library
+   npm install
+   ```
+
+2. **Estructura del Proyecto:**
+
+   La estructura básica de un proyecto de librería con Vite podría ser algo así:
+
+   ```
+   /src
+     /index.js
+   /dist
+   vite.config.js
+   package.json
+   ```
+
+   - `src/index.js`: El punto de entrada de tu librería.
+   - `dist`: El directorio donde se generarán los archivos construidos.
+   - `vite.config.js`: Configuración de Vite.
+   - `package.json`: Metadatos del proyecto.
+
+3. **Configurar Vite para Construir Librerías:**
+
+   Modifica `vite.config.js` para asegurarte de que Vite construya la librería correctamente:
+
+   ```js
+   import { defineConfig } from 'vite';
+
+   export default defineConfig({
+     build: {
+       lib: {
+         entry: 'src/index.js',
+         name: 'MyLibrary',
+         fileName: (format) => `my-library.${format}.js`
+       },
+       rollupOptions: {
+         // Asegúrate de externalizar dependencias que no necesitas empaquetar
+         external: ['vue'], // Ejemplo: si tu librería depende de Vue
+         output: {
+           globals: {
+             vue: 'Vue'
+           }
+         }
+       }
+     }
+   });
+   ```
+
+4. **Escribir el Código de la Librería:**
+
+   Escribe el código de tu librería en `src/index.js`:
+
+   ```js
+   // Ejemplo simple de una función en la librería
+   export function greet(name) {
+     return `Hello, ${name}!`;
+   }
+   ```
+
+5. **Construir la Librería:**
+
+   Construye la librería utilizando el comando de Vite:
+
+   ```bash
+   npm run build
+   ```
+
+   Esto generará los archivos de salida en el directorio `dist`.
+
+6. **Publicar la Librería:**
+
+   Si deseas publicar tu librería en npm, asegúrate de tener una cuenta en npm y haber iniciado sesión:
+
+   ```bash
+   npm login
+   npm publish
+   ```
+
+   Asegúrate de que `package.json` contenga la información correcta como el nombre, versión, descripción, etc.
+
+### Ejemplo Completo
+
+#### `src/index.js`
+
+```js
+export function greet(name) {
+  return `Hello, ${name}!`;
+}
+```
+
+#### `vite.config.js`
+
+```js
+import { defineConfig } from 'vite';
+
+export default defineConfig({
+  build: {
+    lib: {
+      entry: 'src/index.js',
+      name: 'MyLibrary',
+      fileName: (format) => `my-library.${format}.js`
+    },
+    rollupOptions: {
+      external: [],
+      output: {
+        globals: {}
+      }
+    }
+  }
+});
+```
+
+#### `package.json`
+
+```json
+{
+  "name": "my-library",
+  "version": "1.0.0",
+  "description": "My awesome library",
+  "main": "dist/my-library.umd.js",
+  "module": "dist/my-library.es.js",
+  "scripts": {
+    "build": "vite build"
+  },
+  "devDependencies": {
+    "vite": "^4.0.0"
+  }
+}
+```
+
+### Utilizando tu Librería
+
+Una vez publicada, puedes utilizar tu librería en otros proyectos instalándola a través de npm:
+
+```bash
+npm install my-library
+```
+
+Y luego importándola:
+
+```js
+import { greet } from 'my-library';
+
+console.log(greet('World')); // "Hello, World!"
+```
+
+Esto te proporciona un flujo completo para crear, construir y utilizar librerías con Vite, facilitando la reutilización y el mantenimiento de código en tus proyectos.
+
+### Código de la clase
 
 Creamos la carpeta `lib/main.js`
 
@@ -1745,9 +2035,90 @@ Los pasos para crear un proyecto con Vue es igual a los pasos anteriores, solo d
   <summary>Haz clic para ver los resultados 👀👇</summary>
   <br/>
 
+1. ¿Qué tipo de proyectos se pueden hacer con Vite?
+
+	- ✅ Proyectos de frontend con cualquier framework compatible y librerías de componentes, etc.
+
+2. ¿Cómo se importa CSS con Vite?
+
+	- ✅ Con @import en archivos de estilos, y con import en archivos de código.
+
+3. ¿Es posible utilizar Vite para proyectos React?
+
+	- ✅ Si, con soporte completo.
+
+4. ¿Qué son los CSS Modules?
+
+	- ✅ Son el estándar de CSS para resolver el problema de modularidad.
+
+5. ¿Qué es el HMR?
+
+	- ✅ El HMR o Hot Module Replacement, es la estrategia que permite visualizar los cambios del código en tiempo real en el navegador, manteniendo el estado.
+
+6. ¿Porqué es bueno utilizar la desestructuración al importar JSON?
+
+	- ✅ Porque permite optimizar el build para producción, al eliminar todo el código innecesario.
+
+7. ¿Qué es el proceso de bundling?
+
+	- ✅ Es el proceso en el que se optimiza el código en paquetes para producción, eliminando el código innecesario y separando o juntando los módulos necesarios.
+
+8. ¿Cuál es el archivo de configuración de Vite?
+
+	- ✅ vite.config.js
+
+9. ¿Es posible utilizar Vite para proyectos Vue?
+
+	- ✅ Si, con soporte completo.
+
+10. ¿Qué hace el proceso de pre-bundling de Vite?
+
+	- ✅ Agrega compatibilidad, pues adapta módulos en CommonJS o UMD, al formato estándar de ECMAScript, los ES Modules.
+
+11. ¿Qué estrategia utiliza Vite para importar archivos?
+
+	- ✅ Utiliza un servidor de archivos estáticos y luego los importa vía URL.
+
+12. ¿Cuáles son los dos modos de Vite?
+
+	- ✅ Desarrollo y producción.
+
+13. ¿Que hay que agregar a las variables de entorno para poder usarlas en el frontend?
+
+	- ✅ VITE
+
+14. ¿Qué tecnología usa Vite para el procesamiento de CSS?
+
+	- ✅ PostCSS, que da soporte para la optimización en producción, y también para usar pre-procesadores.
+
+15. ¿Cómo funciona la resolución de dependencias de Vite?
+
+	- ✅ Vite expone todo como un servidor de archivos estáticos y aprovecha el caché del navegador para ganar performance.
+
+16. ¿Para qué nos sirve el archivo de configuración de Vite?
+
+	- ✅ Para tomar el control del proceso de desarrollo y producción.
+
+17. ¿Qué es el proceso de minificación?
+
+	- ✅ Es el proceso en el que se elimina el contenido innecesario como espacios y comentarios, para hacer paquetes más ligeros en producción.
+
+18. ¿Cuáles son las ventajas de la importación global?
+
+	- ✅ Que podemos importar archivos de forma masiva utilizando JavaScript, para no tener que importar cada elemento manualmente.
+	- Que tenemos que importar globalmente todo para que todo se encuentre en el scope global.
+
+19. Vite es una herramienta de desarrollo frontend de...
+
+	- ✅ Tercera generación
+
+20. ¿Cuál es el plugin de Vite para utilizar TypeScript?
+
+	- ✅ Ninguno, ya que Vite soporta TypeScript sin configuración adicional.
+
 </details>
 
 👀
 👀👇
 👈👀👇
-
+✅
