--- a/DW/2-intermedio/019.empaquetadores/2.vite.md
+++ b/DW/2-intermedio/019.empaquetadores/2.vite.md
@@ -1025,6 +1025,8 @@ for (const path in modules) {
 console.info(modules);
 ```
 
+[Vite glob import ](https://vitejs.dev/guide/features#glob-import)
+
 ## 12. Uso con TypeScript
 
 Por defecto no se necesita ninguna configuración, solo crea los archivos `.ts` con el código necesario y listo.
