--- a/DW/1-basico/006-html-css/1-html/5.bem.md
+++ b/DW/1-basico/006-html-css/1-html/5.bem.md
@@ -57,13 +57,13 @@ Se les nombra con el nombre de su bloque contenedor, dos guiones bajos y la desc
 
 ```html
 <form class="form">
-	<input type="text" class="form__input">👈👀
-	<input type="submit" class="form__send">👈👀
+  <input type="text" class="form__input" />👈👀
+  <input type="submit" class="form__send" />👈👀
 </form>
 
 <nav class="nav">
-	<a href="#" class="nav__item">Inicio</a>👈👀
-	<a href="#" class="nav__item">Inicio</a>👈👀
+  <a href="#" class="nav__item">Inicio</a>👈👀
+  <a href="#" class="nav__item">Inicio</a>👈👀
 </nav>
 ```
 
@@ -85,13 +85,14 @@ Se les nombra, con el nombre que tenían anteriormente (bloque o elemento) se le
 
 ```html
 <nav class="nav">
-	<a href="#" class="nav__link"></a>
-	<a href="#" class="nav__link nav__link--disabled"></a>👈👀
+  <a href="#" class="nav__link"></a>
+  <a href="#" class="nav__link nav__link--disabled"></a>👈👀
 </nav>
 
-<header class="header header--blue"></header>👈👀
+<header class="header header--blue"></header>
+👈👀
 
-<input type="text" class="form__input form__input--color-gray"/>👈👀
+<input type="text" class="form__input form__input--color-gray" />👈👀
 ```
 
 
@@ -103,12 +104,10 @@ Se nombran como un elemento.
 
 ```html   
 <header class="block">
-	<section class="block__elem1">👈👀
-		<div class="block__elem2">👈👀
-		</div>
-	</section>
-	<div class="block__elem3">👈👀
-	</div>
+  <section class="block__elem1">👈👀
+    <div class="block__elem2">👈👀</div>
+  </section>
+  <div class="block__elem3">👈👀</div>
 </header>
 ```
 
@@ -118,8 +117,7 @@ Se nombran como un elemento.
 Se le llama mix en BEM y si se puede.
 
 ```html
-<div class="block1 block2">👈👀
-</div>
+<div class="block1 block2">👈👀</div>
 ```
 
 ### Podemos usar modificadores globales?    
@@ -140,75 +138,74 @@ Ejemplo de nombres de clases: contenedor y contenido
 ```html
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BEM</title>
-    <link rel="stylesheet" href="./estilos.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./estilos.css" />
+  </head>
+  <body>
     <header class="header">
-        <nav class="nav">
-            <div class="nav__logo">
-                <img src="./logo-spotify.png" class="nav__img">
-            </div>
-            <div class="nav__links">
-                <a href="#" class="nav__link nav__link--color">Inicio</a>
-                <a href="#" class="nav__link">Acerca de</a>
-                <a href="#" class="nav__link">Contacto</a>
-            </div>
-        </nav>
-    </header>
-    <nav class="nav">
+      <nav class="nav">
         <div class="nav__logo">
-            <img src="./logo-spotify.png" class="nav__img">
+          <img src="./logo-spotify.png" class="nav__img" />
         </div>
         <div class="nav__links">
-            <a href="#" class="nav__link nav__link--color">Inicio</a>
-            <a href="#" class="nav__link">Acerca de</a>
-            <a href="#" class="nav__link">Contacto</a>
+          <a href="#" class="nav__link nav__link--color">Inicio</a>
+          <a href="#" class="nav__link">Acerca de</a>
+          <a href="#" class="nav__link">Contacto</a>
         </div>
+      </nav>
+    </header>
+    <nav class="nav">
+      <div class="nav__logo">
+        <img src="./logo-spotify.png" class="nav__img" />
+      </div>
+      <div class="nav__links">
+        <a href="#" class="nav__link nav__link--color">Inicio</a>
+        <a href="#" class="nav__link">Acerca de</a>
+        <a href="#" class="nav__link">Contacto</a>
+      </div>
     </nav>
-</body>
+  </body>
 </html>
 ```
 
 ```css
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-body{
-    font-family: Arial, Helvetica, sans-serif;    
+body {
+  font-family: Arial, Helvetica, sans-serif;
 }
-.nav{
-    background: slateblue;
-    height: 70px;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
+.nav {
+  background: slateblue;
+  height: 70px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .nav__logo {
-    height: 100%;
-    background: #fff;
+  height: 100%;
+  background: #fff;
 }
 
 .nav__img {
-    height: 100%;
-}   
-
-.nav__link{
-    color: #fff;
+  height: 100%;
 }
 
-.nav__link--color{
-    color: #000;
+.nav__link {
+  color: #fff;
 }
 
+.nav__link--color {
+  color: #000;
+}
 ```
 
 [🚀 CURSO COMPLETO Metodología BEMl](https://www.youtube.com/watch?v=YaAkV--25fg)
