--- a/DW/2-intermedio/028.accesibilidad/1.accesibilidad-web.md
+++ b/DW/2-intermedio/028.accesibilidad/1.accesibilidad-web.md
@@ -32,7 +32,7 @@ En inglés son las _Web Content Accessibility Guidelines_ o en español las Pa
 - W3C - World Wide Web Consortium : Creadores de los estándares que usamos para construir la web.
     
 - WAI - Web Accessibility Initiative : Iniciativa dentro de W3C cuya meta es asegurar la accesibilidad web.
-	- **Nivel A** → Nivel más bajo, nos garantiza una necesidad básica para nuestro productos
+	- **Nivel A** → Nivel más bajo, nos garantiza una necesidad básica para nuestros productos
 	- **Nivel B** → Nivel intermedio
 	- **Nivel C** → Nivel Alto → Lo usan empresas que trabajan con gobiernos o universidades
 
@@ -40,7 +40,7 @@ En inglés son las _Web Content Accessibility Guidelines_ o en español las Pa
 
 ## 4. Profundizando los 12 criterios de conformidad
 
-Las pautas de accesibilidad de contenido web nos guían al momento de implementar la accesibilidad web. Las podemos usar durante todo el proceso de desarrollo de producto, desde que nace la idea para lo que queremos construir, durante el diseño de los estilos y las interfaces, hasta cuando escribimos código y hacemos pruebas de calidad. Nos señalan los puntos importantes para tener en cuenta con eso podemos construir páginas, productos y aplicaciones que le funcionan a todos nuestros usuarios sin importar su capacidades, dispositivos o preferencias.
+Las pautas de accesibilidad de contenido web nos guían al momento de implementar la accesibilidad web. Las podemos usar durante todo el proceso de desarrollo de producto, desde que nace la idea para lo que queremos construir, durante el diseño de los estilos y las interfaces, hasta cuando escribimos código y hacemos pruebas de calidad. Nos señalan los puntos importantes para tener en cuenta con eso podemos construir páginas, productos y aplicaciones que le funcionan a todos nuestros usuarios sin importar sus capacidades, dispositivos o preferencias.
 
 Aunque las pautas (referidas también por su nombre en inglés WCAG) son muy completas y siguen creciendo a medida que nuestras tecnologías crecen, es importante conocer los 4 principios que nos guían para poder tomar decisiones puntuales a nivel de nuestros productos. Dentro de cada principio encontramos los criterios de conformidad que se pueden interpretar acorde al nivel de WCAG que le quieres o debes aplicar a tu sitio web. Recuerda que los 3 niveles son:
 
@@ -72,7 +72,7 @@ En esta lectura vamos a profundizar sobre los criterios de conformidad para tene
 	
 	2.2 Darle a las usuarias suficiente tiempo para leer y usar el contenido (tener esto en cuenta cuando hacemos time outs, comunicarlos y dar opciones para pedir más tiempo si es necesario)
 	
-	2.3 Tener mucho cuidado de no usar elementos que brillan o se mueven muy rápido ya que pueden provocar ataques, espasmos o convulsiones
+	2.3 Tener mucho cuidado de no usar elementos que brillan o se mueven muy rápido, ya que pueden provocar ataques, espasmos o convulsiones
 	
 	2.4 Asegurarnos que nuestros usuarios pueden navegar, encontrar contenido y determinar dónde se encuentran en nuestros sitios
 
@@ -98,6 +98,67 @@ Así son los criterios de conformidad para la versión 2.0 de WCAG. Te invito a 
 
 ## 5. Los 4 principios de WCAG
 
+- Perceptible : La información y los componentes de la interfaz de usuario deben ser presentados a los Usuarios de modo que ellos puedan percibirlos.
+    
+- Operable : Los componentes de la interfaz de usuario y la navegación deben ser operables.
+    
+- Comprensible: La información y el manejo de la interfaz de usuario deben ser comprensibles.
+    
+- Robusto: El contenido debe ser suficientemente robusto como para ser interpretado de forma fiable por una amplia variedad de aplicaciones de usuario, incluyendo las ayudas técnicas.
 
+[Guía de accesibilidad web y color](https://www.nachomadrid.com/2020/05/wcag-color-contraste/#Criterio_143_Contraste_minimo_Nivel_AA)
 
-## 6. 
+## 6. Tecnología Asistivas - cuáles son y cómo funcionan
+
+Las **tecnologías asistivas** ayudan a las personas con alguna de sus capacidades mermadas, sean visuales, auditivas o motoras, a consumir la web de la misma forma que lo hacen los demás. . Un ejemplo muy simple y común de este tipo de tecnologías son los lentes 👓. Estos permiten que personas con defectos en la visión puedan percibir el mundo igual que los demás. . **Tecnologías asistivas**: .
+
+### **Visuales**:
+- Lectores de pantalla: Son software que interpretan sitios que puedan leer en voz alta para personas que no puedan leer
+- Extensiones que manipulan el CSS: Estas extensiones pueden manipular el sitio en colores, texto, cambios de estilos de sitio para ayudar a las personas decidir que les ayuda mejor para interpretar el sitio web
+
+### **Motoras**:
+
+Movimiento físico de una persona.
+
+- Varilla bucal.
+- Switch
+
+El teclado es el puente que conecta el sitio web con un mundo de tecnologías asistivas, tenemos que tener en cuenta que lo estamos usando de la mejor manera.
+
+## 7. Instalación del proyecto y primeros pasos
+
+- [Clonar](https://github.com/gmzjuliana/curso-acessibilidad-web)
+- [despliegue](https://gmzjuliana.github.io/curso-acessibilidad-web/index.html)
+
+## 8. Pruebas automáticas con Lighthouse
+
+Ver en Obsidian:
+
+[[debugging-devtools#20. Auditoría en desktop Lighthouse]]
+
+## 9. Pruebas con simuladores de discapacidades visuales
+
+Estas son tres tipos de daltonismo, que es una condición que afecta la percepción del color. A continuación te explico cada una:
+
+1. **Protanopia**: 
+   - Es un tipo de daltonismo rojo-verde.
+   - Las personas con protanopia tienen dificultad para distinguir entre tonos de rojo y verde.
+   - Se debe a la ausencia o mal funcionamiento de los conos de la retina que son sensibles a la luz roja.
+
+2. **Deuteranopia**:
+   - Es otro tipo de daltonismo rojo-verde.
+   - Las personas con deuteranopia tienen dificultad para distinguir entre tonos de rojo y verde, pero de una manera diferente a la protanopia.
+   - Se debe a la ausencia o mal funcionamiento de los conos de la retina que son sensibles a la luz verde.
+
+3. **Acromatopsia**:
+   - También conocida como monocromatismo, es una forma severa de daltonismo.
+   - Las personas con acromatopsia no pueden ver ningún color; todo lo ven en tonos de gris.
+   - Se debe a la ausencia o mal funcionamiento de todos los conos en la retina, lo que significa que dependen completamente de los bastones, que solo detectan luz y oscuridad, para ver.
+
+Cada una de estas condiciones tiene un impacto diferente en la percepción del color y puede requerir diferentes adaptaciones para garantizar la accesibilidad en la web y en otros medios visuales.
+
+Extensión de Firefox: NoCoffe
+
+## 
+
+alt + window + s 
