--- a/DW/2-intermedio/028.accesibilidad/1.accesibilidad-web.md
+++ b/DW/2-intermedio/028.accesibilidad/1.accesibilidad-web.md
@@ -1,6 +1,6 @@
-# Curso de Accesibilidad Web
 
-## 1. ¿Listo para hacer la web un mejor lugar para todos sus usuarios?
+
+# 1. ¿Listo para hacer la web un mejor lugar para todos sus usuarios?
 
 ## 2. Conociendo la importancia de la accesibilidad web
 
