--- a/DW/2-intermedio/028.accesibilidad/1.accesibilidad-web.md
+++ b/DW/2-intermedio/028.accesibilidad/1.accesibilidad-web.md
@@ -159,6 +159,24 @@ Cada una de estas condiciones tiene un impacto diferente en la percepción del c
 
 Extensión de Firefox: NoCoffe
 
-## 
+📌 En DevTool: More Tools/Rendering
 
-alt + window + s 
+No presiones: alt + window + s 
+
+## 10. Pruebas manuales con tu teclado
+
+El teclado es muy importante en la accesibilidad web porque las tecnologías asistivas tienden a conectarse con el teclado para darle a sus usuarios diferentes maneras de navegar cuando no tienen acceso a un mouse o un teclado como nosotros.
+
+Los elementos que reciben foco de teclado son elementos interacctivos:
+
+- Enlaces: nos llevan a otra página, son para la navegación.
+- Botones: nos ayudan a interactuar con la página de alguna manera.
+- Formularios: requieren nuestra interacción para llenar nuestros datos.
+
+Los div no reciben foco porque son un elemento presentacional, no esperan ninguna interacción a menos de que tú lo programes.
+
+> Para avanzar en una web usar `Tab` y para retroceder `Shift + Tab`.
+> Para cambiar entre pestañas de Izquierda a Derecha es: **Ctrl + tab** Para ir de Derecha a Izquierda es: **Ctrl + shift + tab**
+
+
+📌
